# RhytmX

./: README.md
backend/: .env  pyproject.toml  requirements.txt  rhythmx.db
backend/app/: main.py
backend/app/routers/: health.py  mood.py  music.py
backend/app/services/: audio.py  db.py  models.py  music_gen.py
backend/scripts/: seed_db.py
frontend/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/: config.ts  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: AudioPlayer.tsx
frontend/app/mood-map/: page.tsx
frontend/app/playlist/: page.tsx
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AudioPlayer.tsx  SongModal.tsx
frontend/src/contexts/: AudioPlayerContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Home.tsx  MoodMap.tsx  Playlist.tsx  Settings.tsx
frontend/src/services/: api.ts
streamlit_app/: app.py  requirements.txt
